# tetrisAndSnake

./: README.md
src/: Doxyfile  Makefile  ReadMe.md  brick_game_exe
src/gui/desktop/view/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  snakewidget.cpp  snakewidget.h  tetriswidget.cpp  tetriswidget.h
src/gui/desktop/view/.qt/: QtDeploySupport.cmake
src/html/: _c_make_c_compiler_id_8c.html  _c_make_c_x_x_compiler_id_8cpp.html  _documents_2_project_2_c_p_p3___brick_game__v2_80-1_2src_2brick__game_2snake_2controller_8cc_8o_8d.html  _documents_2_project_2_c_p_p3___brick_game__v2_80-1_2src_2brick__game_2snake_2snake__logic_8cc_8o_8d.html  _documents_2_project_2_c_p_p3___brick_game__v2_80-1_2src_2brick__game_2tetris_2tetris__logic_8c_8o_8d.html  _downloads_2_telegram___desktop_2_c_p_p3___brick_game__v2_80-1-develop_2src_2brick__game_2snake_2controller_8cc_8o_8d.html  _read_me_8md.html  annotated.html  class_main_window-members.html  class_main_window.html  class_snake_widget-members.html  class_snake_widget.html  class_tetris_widget-members.html  class_tetris_widget.html  class_ui_1_1_main_window-members.html  class_ui_1_1_main_window.html  class_ui___main_window-members.html  class_ui___main_window.html  classes.html  classs21_1_1_snake_controller-members.html  classs21_1_1_snake_controller.html  classs21_1_1_snake_game_view-members.html  classs21_1_1_snake_game_view.html  classs21_1_1_snake_logic-members.html  classs21_1_1_snake_logic.html  controller_8cc.html  controller_8h.html  controller_8h_source.html  dir_0aabf5a3e5112b036edfcdf92ce391fa.html  dir_0bade608c6a8e9cc7bac5a28e59ae6aa.html  dir_0ddcb5ce9049050be836c22791809cc4.html  dir_11bc0974ce736ce9a6fadebbeb7a8314.html  dir_153f764adfac8fa507285edab412df63.html  dir_28166a4b7a52348791127c177737f1e0.html  dir_2ee2de302366a9522113dfc9d3962873.html  dir_4f41f83ae06a590e98a17fa0a337fcc9.html  dir_538120fd983615d84ab84c260156d41f.html  dir_548570e8bc898e67c6fd91221b57d23a.html  dir_59425e443f801f1f2fd8bbe4959a3ccf.html  dir_5df72b569a756df275c5677335d67e83.html  (+164 more)
src/latex/: _c_make_c_compiler_id_8c.tex  _c_make_c_x_x_compiler_id_8cpp.tex  annotated.tex  class_main_window.tex  controller_8cc.tex  (+121 more)
(+140 files in other folders)
